--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
       - name: Print a welcome message
         run: echo "Welcome to our first guthub"
+    
+      - name: check repository 
+        uses: actions/checlout@v4.2.2
+        
+      - name: list repository files
+        run: ls -la 
+      
 
       
     
