--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         run: echo "Welcome to our first guthub"
     
       - name: check repository 
-        uses: actions/checlout@v4.2.2
+        uses: actions/checkout@v4.2.2
         
       - name: list repository files
         run: ls -la 
