--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -1,3 +1,4 @@
+
 on:
   push:
     branches:
@@ -5,13 +6,13 @@ on:
       - "release/**"
     paths:
       - "src/**"
+
 jobs:
   test:
-    runs-on: ubuntu-latesy
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
 
-      - name: tun tests
-        run: npm testts
-    
+      - name: Run tests
+        run: npm test
