--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,7 +1,7 @@
 on:
   workflow_dispatch:
     inputs:
-      environment:
+      enviroment:
         description: "Choose environment"
         required: true
         default: "staging"
