--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -2,7 +2,7 @@ on:
   workflow_dispatch:
 jobs:
   example:
-     runs-on: unbuntu-latest
+     runs-on: ubuntu-latest
      steps:
      - run: |
          dispatch=true
