--- a/.github/workflows/commands_1.yml
+++ b/.github/workflows/commands_1.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set API key
-      run: echo "API_KEY=12345" >> $GITHUB_ENV
+      run: echo "api-key=12345" >> $GITHUB_ENV
     - name: Use API key
-      run: echo "Using API Key $API_KEY"
+      run: echo "Using API Key $api-key"
