--- a/.github/workflows/push_pull3.yml
+++ b/.github/workflows/push_pull3.yml
@@ -7,6 +7,10 @@ on:
       - "release/**"
     paths:
       - "src/**"
+  pull_request:
+    branches:
+      - main
+      - "release/**"
 
 jobs:
   test:
