--- a/.github/workflows/push_pull3.yml
+++ b/.github/workflows/push_pull3.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - main
       - "release/**"
-
+    paths:
+      - "src/**"
+      
   pull_request:
     branches:
       - main
